assets/css/style.css
body{
	font-family: 'Lato', sans-serif;
	font-size: 14px;
	margin: 0px;

}

h1, h2, h3{
	font-family: 'Paytone One', sans-serif;
	letter-spacing: 1px;
	color: #054F81;
}

/* --------- header section styling  ------------- */
header{
	height: 80px;  /* this will effect the flex heigts*/
	background-color: #054F81;
	padding: 1%;
}

h1{
	letter-spacing: 4px;
	color: #fff;
	font-size: 54px;
	margin: 0px;
}



/* --------- main section styling  --------------------------------------------------- */
main {
	height: 100%;
}

#mapArea{
	background-color: #FBC957;
}

#mapHolder{
	width: 100%; /*set width so img stays within main. temp fix until replace with real map*/
}



/* --------- right section styling  ------------- */

aside {
	width: 25%;
	background-color: #91CED2;
	padding: 15px;
	overflow: scroll;
}

/*outer most events section container */
.events{
	margin-bottom: 15px;
	height:298px; /* i dont like setting the pixels bc of diff screen sizes */
	overflow: scroll; /* I dont like the scroll bc it hides the event header */
}

#addEvent{ 
	/*overflow: scroll;*/
}

/*image rating for the event*/
.ratedImg{
	height: 50px; /* specify height to counter act flex span */
	padding-right: 15px; /* prevent event name from bumping up on right */
}

/* paragraph description text for the event */
.eventDescr{ 
	margin: 0px;
	margin-bottom: 5px;
}


/* h3 elements within the form */
.formHeader{
	display: inline-block;
}

/* submit button in the form*/
#submitBtn {
	padding: 5px 10px;
	margin: 7px;
	font-size: 14px;
	background-color: #89A94A;
	border-radius: 10px;
}
#submitBtn:hover {
	background-color: #FBC957;
}


/*  --------- footer styling  -------------  */

footer{
	height: 40px;
	background-color: #054F81;
	text-align: center;
}

/* ------------------------ END ------------------------------------------------------------------------------------ */







/* ------------------------ FLEX BOX ----------------------------------------------------------------------------- */
body {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
}

/* ---------- Flex header  ---------------*/
header {
	flex: 0 0 98%; /* why does 100 cause horiz scroll? */
}

/* ---------- Flex main  ---------------*/
main {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-content: center;

}

#mapArea {
	display: flex;
	flex: 3;
	align-items: center;
}

/* ---------- Flex aside  ---------------*/
.addEvent{
	display: flex;
}

.ratedEvent {
	display: flex;
	flex-wrap: wrap;
}

#navArea {
	flex: 1; /* this is to keep the nav the same height as the map despite the scroll events */
	display: flex;
	flex-direction: column;
}


/* ---------- Flex footer  ---------------*/
footer {
	flex: 0 0 100%;
}


/* ------------------------ END ------------------------------------------------------------------------------------ */






/* ------------------------ Media Queries-------------------------------------------------------------------------- */

